# LikeBike_front

./: .env.example  CHANGE.md  next.config.ts  package-lock.json  package.json
apis/: axiosInstance.ts
apis/course/: createCourse.ts
apis/quiz/: getQuiz.ts
app/: page.tsx
app/api/news/: route.ts
app/course/: page.tsx
app/my/: page.tsx
app/oauth/: page.tsx
app/quiz/: page.tsx
app/signin/: page.tsx
backend/: .env.example  .gitignore  Cargo.toml
backend/src/: db.rs  error.rs  main.rs  middleware.rs  models.rs  seed.rs
backend/src/handlers/: auth.rs  bikelogs.rs  courses.rs  mod.rs  quizzes.rs  users.rs
components/: BaseLayout.tsx
components/bikelog/: BikeLog.tsx  BikeLogGuide.tsx  BikeLogList.tsx  UploadConfirmModal.tsx  UploadModal.tsx
components/common/: ButtonModal.tsx  CommonModal.tsx  TabList.tsx
components/course/: CourseCard.tsx  CourseCardList.tsx  CourseCreate.tsx  CourseList.tsx  CourseListElement.tsx  CourseSearch.tsx  CourseViewer.tsx  KakaoMapView.tsx
components/main/: BikeLogMain.tsx  GuideButton.tsx  MainBase.tsx  NewsMain.tsx  RewardMain.tsx
components/quiz/: Hint.tsx  InputQuestion.tsx  OXQuestion.tsx  Quiz.tsx  Result.tsx  SelectQuestion.tsx
constant/: storageName.ts
hooks/: useKakao.ts
mocks/: data.ts  mockAdapter.ts
types/: base.ts  quiz.ts
